--- a/public/css/meetings.css
+++ b/public/css/meetings.css
@@ -33,6 +33,8 @@ hr {
   list-style-type: none;
   margin-left: 1rem;
   display: flex;
+  position: relative;
+  top: 1px;
   /* display: inline-block; */
 }
 .links li a {
@@ -50,6 +52,12 @@ hr {
 }
 .oprn-container {
   background-color: #4ea1a1;
+}
+.add-meet-cntr {
+  width: 95%;
+  margin: 0 auto;
+  padding: 1rem;
+  border-radius: 3px;
 }
 .meet-dtls {
   padding: 0;
