--- a/public/css/calendar2.css
+++ b/public/css/calendar2.css
@@ -13,10 +13,23 @@ hr {
   border: none;
   border-bottom: 1px solid var(--dark-white);
 }
+/* Making changes to the nav bar  */
+.header {
+  padding-bottom: 1.9rem;
+}
+.nav-toggle-label {
+  margin-right: 3.5%;
+}
+.logo {
+  margin-left: 5%;
+  /* background-color: var(--grey); */
+}
+
 .main-cntr {
   width: 95%;
   margin: 0 auto;
   margin-bottom: 3em;
+  margin-right: 3.3%;
   /* border: 1px solid grey; */
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -129,20 +142,6 @@ hr {
   /* overflow: scroll; */
 }
 
-/* @media screen and (min-width: 550px) {
-  hr {
-    width: 94%;
-    margin: 0.5rem auto;
-    margin-left: 1.6rem;
-    margin-right: 2%;
-  }
-}
-@media screen and(min-width:620px) {
-  hr {
-    width: 98%;
-    margin-right: 0rem;
-  }
-} */
 @media screen and (max-width: 400px) {
   .calendar-date input[type="date"] {
     width: 3em;
@@ -151,11 +150,7 @@ hr {
     width: 92%;
   }
 }
-@media screen and (max-width: 600px) {
-  hr {
-    width: 95%;
-  }
-}
+
 @media screen and (min-width: 800px) {
   .heading h1 {
     margin-top: 7rem;
@@ -200,11 +195,61 @@ hr {
     height: 128px; /* height= (80*(( 60(30/100))/100))+8px  ( 70+30) */
   }
 }
-
+@media screen and (min-width: 300px) {
+  .logo {
+    margin-left: 9%;
+  }
+}
+@media screen and (min-width: 350px) {
+  .logo {
+    margin-left: 8%;
+  }
+}
+@media screen and (min-width: 400px) {
+  .logo {
+    margin-left: 7%;
+  }
+}
+@media screen and (min-width: 500px) {
+  .logo {
+    margin-left: 7%;
+  }
+}
+@media screen and (min-width: 520px) {
+  .logo {
+    margin-left: 6%;
+  }
+}
+@media screen and (min-width: 550px) {
+  .logo {
+    margin-left: 5.7%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .logo {
+    margin-left: 5.5%;
+  }
+}
+@media screen and (min-width: 720px) {
+  .logo {
+    margin-left: 5%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .main-menu {
+    margin-left: 5%;
+    /* 4.3%; */
+  }
+}
+@media screen and (min-width: 1000px) {
+  .main-menu {
+    margin-left: 4.3%;
+  }
+}
 @media screen and (min-width: 1080px) {
   /* From nav css file */
   .main-menu {
-    margin-right: 5%;
+    margin-left: 4%;
   }
   .heading h1 {
     margin-top: 8rem;
@@ -212,7 +257,7 @@ hr {
     font-size: 3rem;
   }
   hr {
-    width: 94.5%;
+    width: 95%;
     margin-left: 2.6rem;
   }
 
