--- a/public/css/meetings.css
+++ b/public/css/meetings.css
@@ -3,7 +3,7 @@
   margin: 0 auto;
 } */
 .heading h1 {
-  padding: 0% 3%;
+  padding: 0% 2.7%;
 }
 hr {
   width: 99%;
@@ -12,14 +12,14 @@ hr {
 }
 
 .sub-menu {
-  width: 94.2%;
+  width: 95%;
   /* margin-left: 2.3em; */
   margin: 0 auto;
 }
 .links {
   width: 99%;
   margin: 1rem auto;
-  margin-left: 0.2rem;
+
   padding-left: 0;
   display: inline-block;
   border-bottom: 1px solid rgb(172, 170, 170);
@@ -31,7 +31,7 @@ hr {
 } */
 .links li {
   list-style-type: none;
-  margin-left: 1rem;
+  margin-left: 0rem;
   display: flex;
   position: relative;
   top: 1px;
@@ -40,7 +40,7 @@ hr {
 .links li a {
   text-decoration: none;
   /* display: block; */
-  padding: 0.5em;
+  padding: 0.5rem 0.8rem;
   font-size: small;
 }
 .container {
@@ -192,7 +192,7 @@ button {
 
 @media screen and (min-width: 800px) {
   .links li a {
-    font-size: large;
+    font-size: small;
     padding: 1em;
   }
   .snd-heading h2 {
@@ -201,7 +201,7 @@ button {
   .heading h1 {
     margin-top: 7rem;
     font-size: 2.5rem;
-    padding: 0% 1.5%; /*0rem 0.63rem;*/
+    padding: 0% 1%; /*0rem 0.63rem;*/
     /* margin-left: 1.6%; */
   }
 }
