--- a/public/css/team.css
+++ b/public/css/team.css
@@ -6,6 +6,10 @@ hr {
 
   margin: 0 auto;
 }
+/* Making changes to the nav bar  */
+.header {
+  padding-bottom: 1.9rem;
+}
 .main-cntr {
   width: 97%;
   margin: 0 auto;
@@ -24,6 +28,12 @@ hr {
   /* padding: 1rem; */
 
   border-radius: 3px;
+  /* display: flex; */
+}
+.meetings-attend-or-edit {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
 }
 .edit-meet-hd {
   padding-top: 1rem;
@@ -43,8 +53,10 @@ hr {
   padding-right: 1rem;
   border: 1px solid grey;
   border-radius: 3px;
+  flex: 1 1 100%;
 }
 .meet-descr {
+  display: flex;
   font-size: medium;
   color: grey;
 }
@@ -68,21 +80,71 @@ hr {
   background-color: rgb(12, 117, 122);
 }
 .left-meet,
-.success {
+.btn-success {
   margin: 0.5rem auto;
   padding: 0.5rem 0.5rem;
   font-size: small;
   background-color: red;
 }
 .left-meet:hover {
-  background-color: rgb(173, 20, 20);
+  background-color: rgb(204, 128, 128);
 }
-.success {
+
+.add-meeting span {
+  width: 100%;
+
+  /* margin: 44% 44%; */
+  text-align: center;
+  font-size: 4em;
+  font-weight: 400;
+}
+.add-metting-card {
+  flex: 0 0 10%;
+}
+
+.btn-success {
   padding: 0.5rem 0.8rem;
   /* display: flex;
   flex-flow: row wrap; */
   background-color: rgb(33, 102, 105);
 }
-.success:hover {
+.btn-success:hover {
   background-color: rgb(54, 114, 117);
+}
+.card-blank {
+  border: none;
+}
+@media screen and (min-width: 650px) {
+  .heading h1 {
+    margin-top: 7rem;
+    font-size: 2.5rem;
+    padding: 0% 3.2%; /*0rem 0.63rem;*/
+    /* margin-left: 1.6%; */
+  }
+  .meetings-attend-or-edit {
+    justify-content: space-between;
+  }
+  .card {
+    flex: 0 1 48%;
+  }
+  .add-meeting {
+    margin: 39% 0%;
+  }
+}
+@media screen and (min-width: 800px) {
+  .heading h1 {
+    padding: 0% 1.8%;
+  }
+}
+@media screen and (min-width: 950px) {
+  /* .meetings-attend-or-edit{
+    justify-content: space-between;
+  } */
+  .card {
+    flex: 0 1 32%;
+  }
+
+  .add-meeting {
+    margin: 44% 0;
+  }
 }
