--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,157 +1,159 @@
-.container{
-    width: 100%;
-    
-    display: flex;
-    justify-content: center;
-   
-    font-family: 'Roboto', sans-serif;
-    
+.container {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+
+  font-family: "Roboto", sans-serif;
 }
 
-.fgt-pwd{
-    margin-bottom: 2em;
+.fgt-pwd {
+  margin-bottom: 2em;
 }
-a{
-    color: #2874F0;
-    text-decoration: none;
-    
+a {
+  color: #2874f0;
+  text-decoration: none;
 }
-.login-container, .reg-container{
-    padding-top: 5%;
-}
-
-.heading{
-    text-align: center;
-    color:#6b1d1d;
-}
-.login-box, .reg-box{
-    width: auto;
-    padding: 2em;
-    font-size: 18px;
-    font-weight: 500;
-    background-color: lightgray;
-    align-items: center;
-    box-shadow: 3px 3px 10px grey;
-}
-.frm-inp{
-    width: 100%;
-    position: relative;
-}
-label{
-    color:#6b1d1d;
-    font-weight: bold;
-}
-.pwd{
-    margin-bottom: .5em ;
-    
-}
-.email-id, .cnfm-pwd, .new-pwd{
-    margin-bottom: 2em ;
-    
+.login-container,
+.reg-container {
+  margin: 5% auto;
 }
 
-
-.form-grp input{
-    width: 85%;
-    height: 40px;
-    
-    border-radius:6px;
-    padding: 0.2em 1.8em;
-    padding-right: 0.5em;
-    border: 1px solid #6b1d1d;
-    outline: none;
-    /* overflow: ; */
+.heading {
+  text-align: center;
+  color: #6b1d1d;
 }
-.form-grp input:focus{
-    border: 4px solid #6b1d1d;
-    box-shadow: 3px 3px 15px grey;
-
+.login-box,
+.reg-box {
+  width: auto;
+  padding: 2em;
+  font-size: 18px;
+  font-weight: 500;
+  background-color: lightgray;
+  align-items: center;
+  box-shadow: 3px 3px 10px grey;
 }
-.inp-icon-cntr i{
-    position: absolute;
-    top:0;
-    left: 0;
-    font-size: 1em;
-    padding: 0.8em 0.5em;
-    align-items: center;
-    color:#6b1d1d;
-    
+.frm-inp {
+  width: 100%;
+  position: relative;
+}
+label {
+  color: #6b1d1d;
+  font-weight: bold;
+}
+.pwd {
+  margin-bottom: 0.5em;
+}
+.email-id,
+.cnfm-pwd,
+.new-pwd {
+  margin-bottom: 2em;
 }
 
+.form-grp input {
+  width: 85%;
+  height: 40px;
 
-.btn-box{
-    width: 100%;
-    margin: 1em auto;
+  border-radius: 6px;
+  padding: 0.2em 1.8em;
+  padding-right: 0.5em;
+  border: 1px solid #6b1d1d;
+  outline: none;
+  /* overflow: ; */
+}
+.form-grp input:focus {
+  border: 4px solid #6b1d1d;
+  box-shadow: 3px 3px 15px grey;
+}
+.inp-icon-cntr i {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 1em;
+  padding: 0.8em 0.5em;
+  align-items: center;
+  color: #6b1d1d;
+}
+
+.btn-box {
+  width: 100%;
+  margin: 1em auto;
 }
 .btn {
-    width: 100%;
-    height: 2.5em;
-    margin: 0 auto;
-    font-size: 1.3em;
-    font-weight: bold;
-    text-align: center;
-    background-color:rgb(107, 29, 29);
-    color:white;
-    border-radius:3px ;
-    transition: 1s;
+  width: 100%;
+  height: 2.5em;
+  margin: 0 auto;
+  font-size: 1.3em;
+  font-weight: bold;
+  text-align: center;
+  background-color: rgb(107, 29, 29);
+  color: white;
+  border-radius: 3px;
+  transition: 1s;
 }
-.btn:hover{
-     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 30px 0 rgba(0,0,0,0.19);
+.btn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 30px 0 rgba(0, 0, 0, 0.19);
 }
-.btn:active{
-    opacity: .3;
-    /* text-align: center; */
-    
-    width: 100%;
-    height: 3em;
-}
-.register-link, .login-link{
-    font-size: .8em;
-    text-align: center;
-}
+.btn:active {
+  opacity: 0.3;
+  /* text-align: center; */
 
+  width: 100%;
+  height: 3em;
+}
+.register-link,
+.login-link {
+  font-size: 0.8em;
+  text-align: center;
+}
 
 @media screen and (min-width: 1080px) {
-    .login-container, .reg-container{
-         width: 100%;
-        margin: 0 auto;
+  .login-container,
+  .reg-container {
+    width: 100%;
+    margin: 5% auto;
+    padding: 5%;
+  }
 
-    }
-    .form-grp input{
-        width: 90%;
-    }
-    .login-box, .reg-box{
-        width: 30%;
-        margin: 0 auto;
-    }
-    .register-link, .login-link{
+  .form-grp input {
+    width: 90%;
+  }
+  .login-box,
+  .reg-box {
+    width: 30%;
+    margin: 0 auto;
+  }
+  .register-link,
+  .login-link {
     font-size: 1.3rem;
     text-align: center;
-    }
-    .btn{
-        margin-left: 0;
-    }
+  }
+  .btn {
+    margin-left: 0;
+  }
 }
 
-@media screen and (max-width: 550px) {
-    .login-container, .reg-container{
-        padding-top: 10%;
-         width: 100%;
-        margin: 0 auto;
-
-    }
-    .form-grp input{
-        width: 90%;
-    }
-    .login-box, .reg-box{
-        width: 80%;
-        margin: 0 auto;
-    }
-    .register-link, .login-link{
-        font-size: 1em;
-  
-    }
-    .btn{
-        margin-left: 0;
-    }
+@media screen and (min-width: 700px) {
+  .login-container,
+  .reg-container {
+    padding-top: 10%;
+    width: 100%;
+    margin: 0 auto;
+  }
+  .form-grp input {
+    width: 90%;
+  }
+  .login-box,
+  .reg-box {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .register-link,
+  .login-link {
+    font-size: 1em;
+  }
+  .btn {
+    margin-left: 0;
+  }
 }
