--- a/public/css/common-utility.css
+++ b/public/css/common-utility.css
@@ -1,8 +1,10 @@
-.body {
+body,
+.main {
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 .heading h1 {
   margin-top: 4rem;
   padding: 0rem 1.5rem;
