changes in nav1css

--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -4,9 +4,9 @@
   --soft-blue: rgb(61, 128, 128);
   --dark-white: rgb(197, 190, 190);
 }
-.body {
-  margin: 0;
-  padding: 0;
+body {
+  margin: 0px;
+  padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
 * {
