--- a/public/css/calendar2.css
+++ b/public/css/calendar2.css
@@ -5,6 +5,10 @@
   font-size: 2.5em;
   font-family: Arial, Helvetica, sans-serif;
 } */
+body,
+main {
+  margin: 0px;
+}
 hr {
   width: 96%;
   margin: 0.5rem auto;
