--- a/public/css/login1.css
+++ b/public/css/login1.css
@@ -1,23 +1,23 @@
 .container {
   width: 100%;
-
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
 }
+.login-container,
+.reg-container {
+  width: 100%;
+  margin: 3% auto;
+}
 
 .fgt-pwd {
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
+  font-size: 0.8em;
 }
 a {
   color: #2874f0;
   text-decoration: none;
-}
-.login-container,
-.reg-container {
-  width: 100%;
-  margin: 2% auto;
 }
 
 .heading {
@@ -27,11 +27,11 @@ a {
 }
 .login-box,
 .reg-box {
-  width: 400px;
+  width: 45%;
   padding: 2em;
 
   margin: 0 auto;
-  font-size: 18px;
+  font-size: 1em;
   font-weight: 500;
   background-color: lightgray;
   align-items: center;
@@ -44,6 +44,7 @@ a {
 }
 label {
   color: #6b1d1d;
+  font-size: small;
   font-weight: bold;
 }
 .pwd {
@@ -52,13 +53,13 @@ label {
 .email-id,
 .cnfm-pwd,
 .new-pwd {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 
 .frm-inp input {
-  width: 89%;
-  border-radius: 6px;
-  padding: 0.7em 1.8em;
+  width: 83%;
+  border-radius: 4px;
+  padding: 0.4em 1.6em;
   padding-right: 0.5em;
   font-size: 1em;
   border: 1px solid #6b1d1d;
@@ -66,7 +67,7 @@ label {
   /* overflow: ; */
 }
 .form-grp input:focus {
-  border: 4px solid #6b1d1d;
+  border: 2px solid #6b1d1d;
   box-shadow: 3px 3px 15px grey;
 }
 .inp-icon-cntr i {
@@ -74,7 +75,7 @@ label {
   top: 0;
   left: 0;
   font-size: 1em;
-  padding: 0.8em 0.5em;
+  padding: 0.6em 0.5em;
   align-items: center;
   color: #6b1d1d;
 }
@@ -85,16 +86,17 @@ label {
 }
 .btn {
   width: 100%;
-  padding-top: 0.6em;
-  padding-bottom: 0.6em;
+  padding-top: 0.4em;
+  padding-bottom: 0.4em;
   margin: 0 auto;
-  font-size: 1.3em;
+  font-size: 1em;
   font-weight: bold;
   text-align: center;
   background-color: rgb(107, 29, 29);
   color: white;
   border-radius: 3px;
   transition: 1s;
+  outline: none;
 }
 .btn:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
@@ -113,34 +115,95 @@ label {
   text-align: center;
 }
 
-@media screen and (min-width: 700px) {
-  .form-grp input {
-    /* width: 82%;
-     */
-    flex: 1 1 100%;
+@media screen and (min-width: 400px) {
+  .heading h1 {
+    margin-top: 0;
   }
   .login-box,
   .reg-box {
-    width: 40%;
+    width: 200px;
     margin: 0 auto;
   }
+  .form-grp input {
+    width: 82%;
+    padding: 0.47em 1.8em;
+    padding-right: 0.4em;
+  }
+}
+@media screen and (min-width: 500px) {
+  .login-box,
+  .reg-box {
+    width: 250px;
+    margin: 0 auto;
+  }
+  label {
+    font-size: medium;
+  }
+  .form-grp input {
+    width: 85%;
+    padding: 0.5em 1.8em;
+    padding-right: 0.4em;
+  }
+  .btn {
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    font-size: 1em;
+  }
+}
+@media screen and (min-width: 700px) {
+  .heading h1 {
+    margin-top: 0.67em;
+  }
+  .form-grp input {
+    width: 86.5%;
+
+    /* flex: 1 1 90%; */
+  }
+  .login-box,
+  .reg-box {
+    width: 300px;
+    margin: 0 auto;
+  }
+  .frm-inp input {
+    border-radius: 6px;
+    padding: 0.7em 1.8em;
+    padding-right: 0.5em;
+  }
+  .inp-icon-cntr i {
+    font-size: 1em;
+    padding: 0.8em 0.5em;
+  }
+  .email-id,
+  .cnfm-pwd,
+  .new-pwd {
+    margin-bottom: 2em;
+  }
+  .fgt-pwd {
+    margin-bottom: 2em;
+  }
   .register-link,
-  .login-link {
+  .login-link,
+  .fgt-pwd {
     font-size: 1em;
   }
   .btn {
     width: 100%;
+    font-size: 1.3em;
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
   }
 }
 
 @media screen and (min-width: 1080px) {
   .frm-inp input {
-    flex: 1 1 100%;
+    /* flex: 1 1 100%; */
+    width: 88.3%;
   }
   .login-box,
   .reg-box {
-    width: 35%;
+    width: 400px;
     margin: 0 auto;
+    font-size: 1.2em;
     /* display: flex;
     align-content: center;
     justify-content: flex-start; */
@@ -149,8 +212,8 @@ label {
     width: 100%;
   }
   .register-link,
-  .login-link {
-    font-size: 1.3rem;
-    text-align: center;
+  .login-link,
+  .fgt-pwd {
+    font-size: 1.2rem;
   }
 }
