--- a/public/css/login1.css
+++ b/public/css/login1.css
@@ -8,7 +8,6 @@
 .login-container,
 .reg-container {
   width: 100%;
-  margin: 3% auto;
 }
 
 .fgt-pwd {
@@ -27,7 +26,7 @@ a {
 }
 .login-box,
 .reg-box {
-  width: 45%;
+  width: 50%;
   padding: 2em;
 
   margin: 0 auto;
@@ -75,7 +74,7 @@ label {
   top: 0;
   left: 0;
   font-size: 1em;
-  padding: 0.6em 0.5em;
+  padding: 0.5em 0.5em;
   align-items: center;
   color: #6b1d1d;
 }
@@ -114,8 +113,20 @@ label {
   font-size: 0.8em;
   text-align: center;
 }
+@media screen and (min-width: 300px) {
+  .login-box,
+  .reg-box {
+    width: 200px;
+    margin: 0 auto;
+  }
+}
 
 @media screen and (min-width: 400px) {
+  .login-container,
+  .reg-container {
+    margin: 3% auto;
+  }
+
   .heading h1 {
     margin-top: 0;
   }
@@ -128,6 +139,9 @@ label {
     width: 82%;
     padding: 0.47em 1.8em;
     padding-right: 0.4em;
+  }
+  .inp-icon-cntr i {
+    padding: 0.6em 0.5em;
   }
 }
 @media screen and (min-width: 500px) {
