--- a/public/css/login1.css
+++ b/public/css/login1.css
@@ -21,7 +21,7 @@ a {
 
 .heading {
   text-align: center;
-  color: #6b1d1d;
+  color: #4ea1a1; /*#6b1d1d;*/
   flex: 1 0 100%;
 }
 .login-box,
@@ -42,7 +42,7 @@ a {
   position: relative;
 }
 label {
-  color: #6b1d1d;
+  color: #4ea1a1;
   font-size: small;
   font-weight: bold;
 }
@@ -61,12 +61,12 @@ label {
   padding: 0.4em 1.6em;
   padding-right: 0.5em;
   font-size: 1em;
-  border: 1px solid #6b1d1d;
+  border: 1px solid #4a9b9b;
   outline: none;
   /* overflow: ; */
 }
 .form-grp input:focus {
-  border: 2px solid #6b1d1d;
+  border: 2px solid #80d4d4;
   box-shadow: 3px 3px 15px grey;
 }
 .inp-icon-cntr i {
@@ -76,7 +76,7 @@ label {
   font-size: 1em;
   padding: 0.5em 0.5em;
   align-items: center;
-  color: #6b1d1d;
+  color: #4ea1a1;
 }
 
 .btn-box {
@@ -91,15 +91,17 @@ label {
   font-size: 1em;
   font-weight: bold;
   text-align: center;
-  background-color: rgb(107, 29, 29);
+  background-color: #4ea1a1;
   color: white;
   border-radius: 3px;
-  transition: 1s;
+  transition: 500ms ease-in-out;
   outline: none;
+  border: none;
 }
 .btn:hover {
-  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
-    0 17px 30px 0 rgba(0, 0, 0, 0.19);
+  /* box-shadow: 0px 5px 3px 2px #3d8383, 0 5px 3px 2px #4d7979; */
+  outline: 2px solid #4ea1a1;
+  outline-offset: 3px;
 }
 .btn:active {
   opacity: 0.3;
@@ -120,7 +122,7 @@ label {
   }
   .login-box,
   .reg-box {
-    width: 220px;
+    width: 250px;
     margin: 0 auto;
   }
   .form-grp input {
