--- a/public/css/team.css
+++ b/public/css/team.css
@@ -14,8 +14,10 @@ hr {
   width: 97%;
   margin: 0 auto;
   margin-bottom: 3em;
+  position: relative;
   /* border: 1px solid grey; */
   font-family: Arial, Helvetica, sans-serif;
+  z-index: 1;
 }
 .sub-menu {
   width: 94.2%;
@@ -114,6 +116,92 @@ hr {
 .card-blank {
   border: none;
 }
+
+.add-team-form {
+  display: none;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  width: 300px;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 1px solid grey;
+  background-color: #4ea1a1;
+  font-family: "Roboto", sans-serif;
+}
+.add-team-form h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+}
+.form-grp {
+  display: flex;
+  flex-direction: column;
+  padding-left: 23%;
+  font-family: "Roboto", sans-serif;
+  margin: 0 auto;
+}
+label {
+  font-size: 1rem;
+}
+
+#addTeamForm {
+  cursor: pointer;
+}
+#close {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.5rem;
+  color: white;
+  background-color: rgb(158, 33, 33);
+}
+.btn-submit {
+  margin: 0;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-right: 5em;
+}
+
+.form-grp input,
+.form-grp textarea {
+  outline: none;
+  padding: 0.4em 0.6em;
+
+  border-radius: 5px;
+  font-size: medium;
+}
+.form-grp input:focus,
+.form-grp textarea:focus {
+  border-color: rgb(169, 228, 228);
+  border: 2px solid;
+}
+.form-grp input,
+.form-grp textarea {
+  margin-bottom: 0.5em;
+}
+@media screen and (min-width: 350px) {
+  .add-team-form {
+    left: 5%;
+  }
+}
+@media screen and (min-width: 400px) {
+  .add-team-form {
+    left: 8%;
+    width: 350px;
+  }
+}
+@media screen and (min-width: 450px) {
+  .add-team-form {
+    left: 15%;
+  }
+}
+@media screen and (min-width: 500px) {
+  .add-team-form {
+    left: 18%;
+  }
+}
 @media screen and (min-width: 650px) {
   .heading h1 {
     margin-top: 7rem;
@@ -130,10 +218,17 @@ hr {
   .add-meeting {
     margin: 39% 0%;
   }
+  .add-team-form {
+    top: 3%;
+    left: 25%;
+  }
 }
 @media screen and (min-width: 800px) {
   .heading h1 {
     padding: 0% 1.8%;
+  }
+  .add-team-form {
+    left: 30%;
   }
 }
 @media screen and (min-width: 950px) {
@@ -146,5 +241,8 @@ hr {
 
   .add-meeting {
     margin: 44% 0;
+  }
+  .add-team-form {
+    left: 35%;
   }
 }
