--- a/public/css/team.css
+++ b/public/css/team.css
@@ -32,18 +32,18 @@ hr {
   border-radius: 3px;
   /* display: flex; */
 }
-.meetings-attend-or-edit {
+.team-attend-or-edit {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
 }
-.edit-meet-hd {
+.edit-team-hd {
   padding-top: 1rem;
   font-size: medium;
   color: grey;
   display: flex;
 }
-.meet-agenda h5 {
+.team-title h5 {
   font-size: 1.2rem;
   margin: 1rem 0rem;
   display: flex;
@@ -57,12 +57,14 @@ hr {
   border-radius: 3px;
   flex: 1 1 100%;
 }
-.meet-descr {
+.team-descr {
   display: flex;
   font-size: medium;
   color: grey;
 }
-
+.select-members {
+  padding: 0.5em 0.6em 0.5em 0.5em;
+}
 .btn {
   /* width: 30%; */
   /* height: 2.5em; */
@@ -81,14 +83,14 @@ hr {
 .btn:hover {
   background-color: rgb(12, 117, 122);
 }
-.left-meet,
+.left-team,
 .btn-success {
   margin: 0.5rem auto;
   padding: 0.5rem 0.5rem;
   font-size: small;
   background-color: red;
 }
-.left-meet:hover {
+.left-team:hover {
   background-color: rgb(204, 128, 128);
 }
 
@@ -100,12 +102,12 @@ hr {
   font-size: 4em;
   font-weight: 400;
 }
-.add-metting-card {
+.add-team-card {
   flex: 0 0 10%;
 }
 
 .btn-success {
-  padding: 0.5rem 0.8rem;
+  padding: 0.7rem 0.8rem;
   /* display: flex;
   flex-flow: row wrap; */
   background-color: rgb(33, 102, 105);
@@ -128,6 +130,13 @@ hr {
   border: 1px solid grey;
   background-color: #4ea1a1;
   font-family: "Roboto", sans-serif;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+}
+.add-team-form-container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .add-team-form h2 {
   text-align: center;
@@ -137,7 +146,7 @@ hr {
 .form-grp {
   display: flex;
   flex-direction: column;
-  padding-left: 15%;
+
   font-family: "Roboto", sans-serif;
   margin: 0 auto;
 }
@@ -158,45 +167,45 @@ label {
   background-color: rgb(158, 33, 33);
 }
 .btn-submit {
-  margin: 0;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  margin-right: 5em;
+  margin: 1em auto;
+  width: 100%;
 }
 
 .form-grp input,
 .form-grp textarea {
   outline: none;
   padding: 0.4em 0.6em;
-
+  width: 100%;
   border-radius: 5px;
   font-size: medium;
 }
 .form-grp input:focus,
 .form-grp textarea:focus {
-  border-color: rgb(169, 228, 228);
-  border: 2px solid;
+  border: 2px solid rgb(12, 117, 122);
 }
-.form-grp input,
-.form-grp textarea {
+.form-control {
   margin-bottom: 0.5em;
+}
+#choose-member {
+  width: 77%;
+  padding: 0.5em 0.6em 0.5em 0.5em;
 }
 @media screen and (min-width: 350px) {
   .add-team-form {
     left: 5%;
   }
-  .form-grp {
+  /* .form-grp {
     padding-left: 18%;
-  }
+  } */
 }
 @media screen and (min-width: 400px) {
   .add-team-form {
     left: 8%;
     width: 350px;
   }
-  .form-grp {
+  /* .form-grp {
     padding-left: 20%;
-  }
+  } */
 }
 @media screen and (min-width: 450px) {
   .add-team-form {
@@ -215,7 +224,7 @@ label {
     padding: 0% 3.2%; /*0rem 0.63rem;*/
     /* margin-left: 1.6%; */
   }
-  .meetings-attend-or-edit {
+  .team-attend-or-edit {
     justify-content: space-between;
   }
   .card {
@@ -228,9 +237,9 @@ label {
     top: 3%;
     left: 25%;
   }
-  .form-grp {
+  /* .form-grp {
     padding-left: 22%;
-  }
+  } */
 }
 @media screen and (min-width: 800px) {
   .heading h1 {
@@ -239,12 +248,12 @@ label {
   .add-team-form {
     left: 30%;
   }
-  .form-grp {
+  /* .form-grp {
     padding-left: 22%;
-  }
+  } */
 }
 @media screen and (min-width: 950px) {
-  /* .meetings-attend-or-edit{
+  /* .team-attend-or-edit{
     justify-content: space-between;
   } */
   .card {
@@ -257,7 +266,7 @@ label {
   .add-team-form {
     left: 35%;
   }
-  .form-grp {
+  /* .form-grp {
     padding-left: 22%;
-  }
+  } */
 }
