--- a/public/css/login.css
+++ b/public/css/login.css
@@ -35,7 +35,7 @@ a {
   font-weight: 500;
   background-color: lightgray;
   align-items: center;
-  box-shadow: 3px 3px 10px grey;
+  box-shadow: 0 4px 15px rgb(0 0 0 / 0.9);
 }
 .frm-inp {
   width: 100%;
