--- a/public/css/team.css
+++ b/public/css/team.css
@@ -127,10 +127,10 @@ hr {
   width: 300px;
   margin: 0 auto;
   border-radius: 5px;
-  border: 1px solid grey;
+
   background-color: #4ea1a1;
   font-family: "Roboto", sans-serif;
-  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  box-shadow: 0 4px 15px rgb(0 0 0 / 0.9);
 }
 .add-team-form-container {
   width: 70%;
@@ -164,7 +164,11 @@ label {
   right: 0;
   padding: 0.5rem;
   color: white;
-  background-color: rgb(158, 33, 33);
+  background-color: transparent;
+  border-top-right-radius: 6px;
+}
+#close:hover {
+  background-color: rgb(163, 53, 53);
 }
 .btn-submit {
   margin: 1em auto;
@@ -187,7 +191,7 @@ label {
   margin-bottom: 0.5em;
 }
 #choose-member {
-  width: 70%;
+  width: 73%;
   padding: 0.5em 0.6em 0.5em 0.5em;
 }
 
