--- a/public/css/calendar2.css
+++ b/public/css/calendar2.css
@@ -5,10 +5,7 @@
   font-size: 2.5em;
   font-family: Arial, Helvetica, sans-serif;
 } */
-body,
-main {
-  margin: 0px;
-}
+
 hr {
   width: 96%;
   margin: 0.5rem auto;
@@ -56,7 +53,8 @@ hr {
   border-radius: 6px;
 }
 .calendar-date input[type="date"]:focus {
-  border: 3px solid rgb(100, 97, 97);
+  border: 2px solid rgb(100, 97, 97);
+  box-shadow: 2px 2px 5px rgb(110, 108, 108);
 }
 .snd-heading.date-dsply {
   font-size: 0.8em;
@@ -200,6 +198,9 @@ hr {
   .logo {
     margin-left: 5%;
   }
+  .nav-bar li a {
+    padding-left: 5%;
+  }
 }
 @media screen and (min-width: 800px) {
   .main-menu {
@@ -240,6 +241,10 @@ hr {
     border-radius: 8px;
     margin-right: 0.8rem;
   }
+  .calendar-date input[type="date"]:focus {
+    box-shadow: 3px 3px 5px rgb(110, 108, 108);
+  }
+
   .date-dsply {
     font-size: 0.8em;
     font-weight: 500;
@@ -264,6 +269,10 @@ hr {
   .calendar-meeting2 {
     top: 73.3em; /* ( 40 + 2 ) * 7 + 20 */ /* (80+ 8)*6*/
     height: 128px; /* height= (80*(( 60(30/100))/100))+8px  ( 70+30) */
+  }
+  .nav-bar li a {
+    padding: 0.8em 0.3em;
+    font-size: 1.2em;
   }
 }
 
@@ -299,5 +308,9 @@ hr {
   }
   .calendar-meeting {
     width: 89%;
+  }
+  .nav-bar li a {
+    padding: 1em 0.5em;
+    font-size: 1.5em;
   }
 }
