--- a/public/css/common-utility.css
+++ b/public/css/common-utility.css
@@ -1,7 +1,6 @@
 body,
 main {
   margin: 0px;
-  margin-left: 0px;
   padding: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -43,6 +42,41 @@ hr {
 }
 .snd-heading h2 {
   color: black;
+}
+
+.left-meet,
+.left-team,
+.success {
+  margin: 0.5rem auto;
+  padding: 0.5rem 0.5rem;
+  font-size: small;
+  background-color: red;
+}
+.left-meet:hover,
+.left-team:hover {
+  padding: 0.6rem 0.6rem;
+  font-size: 0.9rem;
+  background-color: rgb(173, 20, 20);
+}
+.left-meet:active,
+.left-team:active {
+  padding: 0.5rem 0.5rem;
+  font-size: 0.9rem;
+}
+
+/* Add button style */
+.btn-success {
+  padding: 0.5rem 0.8rem;
+
+  background-color: rgb(33, 102, 105);
+}
+.btn-success:hover {
+  padding: 0.6rem 0.9rem;
+  font-size: 1.1rem;
+}
+.btn-success:active {
+  padding: 0.5rem 0.8rem;
+  font-size: 0.9rem;
 }
 
 @media screen and (min-width: 800px) {
