--- a/public/css/login1.css
+++ b/public/css/login1.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .container {
   width: 100%;
   display: flex;
@@ -5,6 +8,7 @@
   margin: 0 auto;
   font-family: "Roboto", sans-serif;
 }
+
 .login-container,
 .reg-container {
   width: 100%;
@@ -56,7 +60,8 @@ label {
 }
 
 .frm-inp input {
-  width: 83%;
+  /* width: 83%; */
+  width: 100%;
   border-radius: 4px;
   padding: 0.4em 1.6em;
   padding-right: 0.5em;
@@ -66,8 +71,8 @@ label {
   /* overflow: ; */
 }
 .form-grp input:focus {
-  border: 2px solid #80d4d4;
-  box-shadow: 3px 3px 15px grey;
+  border: 3px solid #80d4d4;
+  box-shadow: 2px 2px 5px rgb(110, 108, 108);
 }
 .inp-icon-cntr i {
   position: absolute;
@@ -94,7 +99,7 @@ label {
   background-color: #4ea1a1;
   color: white;
   border-radius: 3px;
-  transition: 500ms ease-in-out;
+  transition: 400ms ease;
   outline: none;
   border: none;
 }
@@ -106,14 +111,22 @@ label {
 .btn:active {
   opacity: 0.3;
   /* text-align: center; */
-
+  padding-top: 0.8em;
+  font-size: 1.1em;
+  padding-bottom: 0.8em;
   width: 100%;
-  height: 3em;
 }
 .register-link,
 .login-link {
   font-size: 0.8em;
   text-align: center;
+}
+@media screen and (max-width: 299px) {
+  .login-box,
+  .reg-box {
+    width: 96%;
+    /* height: 100%; */
+  }
 }
 @media screen and (min-width: 300px) {
   .login-container,
@@ -126,7 +139,7 @@ label {
     margin: 0 auto;
   }
   .form-grp input {
-    width: 84%;
+    /* width: 84%; */
   }
 }
 
@@ -140,7 +153,7 @@ label {
     margin: 0 auto;
   }
   .form-grp input {
-    width: 86%;
+    /* width: 86%; */
     padding: 0.47em 1.8em;
     padding-right: 0.4em;
   }
@@ -173,7 +186,7 @@ label {
     margin-top: 0.67em;
   }
   .form-grp input {
-    width: 86.5%;
+    /* width: 86.5%; */
 
     /* flex: 1 1 90%; */
   }
@@ -215,7 +228,7 @@ label {
 @media screen and (min-width: 1080px) {
   .frm-inp input {
     /* flex: 1 1 100%; */
-    width: 88.3%;
+    /* width: 88.3%; */
   }
   .login-box,
   .reg-box {
@@ -233,5 +246,8 @@ label {
   .login-link,
   .fgt-pwd {
     font-size: 1.2rem;
+  }
+  label {
+    font-size: medium;
   }
 }
